--- a/index.html
+++ b/index.html
@@ -168,6 +168,47 @@
             </div>
           </div>
         </section>
+        <section class="container mt-5">
+          <h2>Backpack</h2>
+          <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+            <div class="col">
+              <div class="card h-100 shadow-lg border-0">
+                <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Red bag</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="m-3">
+                  <div class="btn btn btn-warning">Buy Now</div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100 shadow-lg border-0">
+                <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Blue Bag</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="m-3">
+                  <div class="btn btn btn-warning">Buy Now</div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100 shadow-lg border-0">
+                <img src="images/bags/bag-3.png"card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Black Bag</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="m-3">
+                  <div class="btn btn btn-warning">Buy Now</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
     </main>
     <footer>
 
