Email subscription part

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                   </div>
                 </div>
         </section>
+        <!-- Shoes Section -->
         <section class="container">
           <h2>Shoes</h2>
           <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
@@ -168,7 +169,8 @@
             </div>
           </div>
         </section>
-        <section class="container mt-5">
+        <!-- Bags Section -->
+        <section class="container my-5">
           <h2>Backpack</h2>
           <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             <div class="col">
@@ -207,6 +209,15 @@
                 </div>
               </div>
             </div>
+          </div>
+        </section>
+        <!-- Subscribe -->
+        <section style="height: 300px;" class="container bg-info d-flex justify-content-center align-items-center rounded-3">
+          <div>
+            <h1>LET'S STAY IN TOUCH</h1>
+            <p>Get updates on sales, specials and more</p>
+            <input type="text" placeholder="Your Email"><br>
+            <button class="btn btn-warning">Submit</button> 
           </div>
         </section>
     </main>
