--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda Commerce</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- Header Start -->
     <header>
         <!-- Nav Menu -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
               <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="">
@@ -25,13 +26,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#bags">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#subs">Subscribe</a>
                   </li>
                   
                 </ul>
@@ -43,14 +44,14 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                      <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+                      <div class="row p-5 panda_info bg-gradient d-flex align-items-center">
                         <div class="col-lg-7">
                             <h1>Cool Dude Headphone</h1>
                             <p>
                                This is the best headphone in the worls for people who just want to waste time in front of funky world. 
                             </p>
                             <h1>$ 420</h1>
-                             <button class="btn btn-warning">Buy Now</button>
+                             <button class="panda-btn-buy-now">Buy Now</button>
 
                         </div>
                         <div class="col-lg-5">
@@ -60,14 +61,14 @@
                     
                   </div>
                   <div class="carousel-item">
-                    <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+                    <div class="row p-5 panda_info bg-gradient d-flex align-items-center">
                         <div class="col-lg-7">
                             <h1>X-Box for your living room</h1>
                             <p>
                                This is the best x-box in the worls for people who just want to waste time in front of fake sports. 
                             </p>
                             <h1>$ 600</h1>
-                             <button class="btn btn-warning">Buy Now</button>
+                             <button class="panda-btn-buy-now">Buy Now</button>
 
                         </div>
                         <div class="col-lg-5">
@@ -76,14 +77,14 @@
                       </div>
                   </div>
                   <div class="carousel-item">
-                    <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+                    <div class="row p-5 panda_info bg-gradient d-flex align-items-center">
                         <div class="col-lg-7">
                             <h1>Mega LCD TV for sports</h1>
                             <p>
                                This is the best lcd tv in the worls for people who just want to waste time in front of tv. 
                             </p>
                             <h1>$ 1200</h1>
-                             <button class="btn btn-warning">Buy Now</button>
+                             <button class="panda-btn-buy-now">Buy Now</button>
 
                         </div>
                         <div class="col-lg-5">
@@ -105,7 +106,7 @@
     </header>
     <main>
         <!-- Categories -->
-        <section class="container my-5">
+        <section class="container my-5 categories">
                 <div class="row g-5">
                   <div class="col-lg-4 col-md-6 col-12">
                     <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
@@ -128,7 +129,7 @@
                 </div>
         </section>
         <!-- Shoes Section -->
-        <section class="container">
+        <section class="container" id="shoes">
           <h2>Shoes</h2>
           <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             <div class="col">
@@ -139,7 +140,7 @@
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
                 <div class="m-3">
-                  <div class="btn btn btn-warning">Buy Now</div>
+                  <div class="btn panda-btn-buy-now">Buy Now</div>
                 </div>
               </div>
             </div>
@@ -151,7 +152,7 @@
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                 </div>
                 <div class="m-3">
-                  <div class="btn btn btn-warning">Buy Now</div>
+                  <div class="btn panda-btn-buy-now">Buy Now</div>
                 </div>
               </div>
             </div>
@@ -163,14 +164,14 @@
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                 </div>
                 <div class="m-3">
-                  <div class="btn btn btn-warning">Buy Now</div>
+                  <div class="btn panda-btn-buy-now">Buy Now</div>
                 </div>
               </div>
             </div>
           </div>
         </section>
         <!-- Bags Section -->
-        <section class="container my-5">
+        <section class="container my-5" id="bags">
           <h2>Backpack</h2>
           <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             <div class="col">
@@ -181,7 +182,7 @@
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
                 <div class="m-3">
-                  <div class="btn btn btn-warning">Buy Now</div>
+                  <div class="btn panda-btn-buy-now">Buy Now</div>
                 </div>
               </div>
             </div>
@@ -193,7 +194,7 @@
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                 </div>
                 <div class="m-3">
-                  <div class="btn btn btn-warning">Buy Now</div>
+                  <div class="btn panda-btn-buy-now">Buy Now</div>
                 </div>
               </div>
             </div>
@@ -205,24 +206,24 @@
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                 </div>
                 <div class="m-3">
-                  <div class="btn btn btn-warning">Buy Now</div>
+                  <div class="btn panda-btn-buy-now">Buy Now</div>
                 </div>
               </div>
             </div>
           </div>
         </section>
         <!-- Subscribe -->
-        <section style="height: 300px;" class="container bg-info d-flex justify-content-center align-items-center rounded-3">
+        <section style="height: 300px;" class="container panda_info d-flex justify-content-center align-items-center rounded-3" id="subs">
           <div>
             <h1>LET'S STAY IN TOUCH</h1>
             <p>Get updates on sales, specials and more</p>
-            <input type="text" placeholder="Your Email"><br>
-            <button class="btn btn-warning">Submit</button> 
+            <input class="form-control" type="text" placeholder="Your Email"><br>
+            <button class="panda-btn-buy-now">Submit</button> 
           </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="mt-5 text-center">
+      <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
     </footer>
 
 <script src="js/bootstrap.bundle.min.js"></script>
